# fc_task

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml
data_source/: FinCatch_Sources_Medium.csv
fc_task/: article_model.py  config.py
fc_task/clustering/: k_means.py
fc_task/extractor/: main.py  text_llm_summary.py  text_nlp.py
fc_task/runner/: celery.py  tasks.py
fc_task/vizualizer/: relation_extraction.py
